2003-07-16  Chris Dean  <Chris.Dean@sokitomi.com>

	* PrimType.java (compare):  Guard againt null otherName.

2003-06-18  Jim White  <jim@pagesmiths.com>

	* Type.java (mapNameToType):  Initialize statically.

2003-06-22  Per Bothner  <per@bothner.com>

	* PrimType.java (emitCoerceToObject):  Fix handling of boolean case.
	Fixes bug reported by Wen-Chun Ni <wcn@tbcommerce.com>.

2003-05-17  Per Bothner  <per@bothner.com>

	* ClassType.java (getModifiers, getInterfaces):  Only call
	getReflectClass if isExisting.

2003-05-13  Per Bothner  <per@bothner.com>

	* Type.java:  Make default constructor protected.

2003-04-29  Jim White  <jim@pagesmiths.com>

	* ObjectType.java (getReflectClass):  Move comment to separate line.
	Lined for Ant support.

2003-04-25  Per Bothner  <per@bothner.com>

	* ObjectType.java (getReflectClass):  Pass false to initialize argument
	of Class.forName - but only if Java2 is selected.

2003-04-21  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java:  Rewrite to use a Hashtable.

2003-04-04  Per Bothner  <per@bothner.com>

	* Access.java (toString(int,char)):  New overloaded method.
	Allows printing 'super' instead of 'synchronized' for a class.
	* ClassTypeWriter.java printClassInfo, printFields, printMethods):
	Use new method.

2003-03-13  Per Bothner  <per@bothner.com>

	* CodeAttr.java (getSP):  New method.

	* CodeAttr.java (emitPushString):  Don't do redundant pushType
	if we call emitPushNull.

2002-11-19  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* CodeAttr.java (emitSwap):  Handle two word values.

2002-10-21  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* CodeAttr.java (doPendingFinalizers): Fix verification error
	when returning a value inside a try/finally.

2002-08-16  Per Bothner  <per@bothner.com>

	* PrimType.java (compare):  tostring_type is more general.
	* ArrayType.java (compare):  Likewise.

2002-08-06  Per Bothner  <per@bothner.com>

	* ObjectType.java (isExisting):  New method.
